# langchain_demo

./: .gitignore  CLAUDE.md  pyproject.toml  run.py
perplexia_ai/: app.py
perplexia_ai/week1/: factory.py  part1.py  part2.py  part3.py
perplexia_ai/week2/: __init__.py  factory.py  part1.py  part2.py  part3.py
tests/: conftest.py  test_document_rag.py  test_query_understanding.py  test_web_search.py
